--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "헝가리어 학습 플랫폼 프론트엔드 웹 애플리케이션",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3900",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
