feat: Complete Vocabulary learning module
- Backend: Added comprehensive JSON data for levels A1-B2 & improved API routing
- Frontend: Implemented 3D card 25learning, TTS, Keyboard shortcuts
- Feature: Added 'My Vocabulary' (Bookmark) & PDF export functionality
- UI: Enhanced dashboard stats and unlocked all levels
- Fix: Resolved API connection issues with robust path handling

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "html2canvas": "^1.4.1",
     "immer": "^11.0.0",
     "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.303.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
