--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "react-markdown": "^10.1.0",
     "react-query": "^3.39.3",
     "recharts": "^3.5.0",
+    "swr": "^2.3.8",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.7"
