--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.303.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
