--- a/backend/package.json
+++ b/backend/package.json
@@ -32,24 +32,25 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "prisma": "^5.7.1",
-    "redis": "^4.6.10"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
+    "redis": "^4.6.10",
+    "typescript": "^5.3.3",
+    "ts-node": "^10.9.1",
+    "@types/node": "^20.10.5",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.8",
+    "@types/cors": "^2.8.17",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.10.5",
-    "@types/nodemailer": "^6.4.14",
+    "@types/nodemailer": "^6.4.14"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.8",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1"
+    "ts-jest": "^29.1.1"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
