--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -42,8 +42,8 @@
     },
     "noImplicitAny": true,
     "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedLocals": false,
+    "noUnusedParameters": false
   },
   "include": [
     "next-env.d.ts",
