--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.0.0",
     "framer-motion": "^12.23.26",
     "html2canvas": "^1.4.1",
     "immer": "^11.0.0",
